# python-project-template

./: .gitignore  README.md  pre-commit-hook.sh  pyproject.toml  requirements.txt
lint/: flake8.ini  pre-commit-hook.sh
test/: pytest.ini  test_hello_world.py
